--- a/kvue/03-kvue.html
+++ b/kvue/03-kvue.html
@@ -1,7 +1,10 @@
 <div id="app">
   <p>{{counter}}</p>
   <p k-text="counter"></p>
-  <button>button</button>
+  <p k-html="desc"></p>
+  <button @click="onclick">button</button>
+  <input type="text" k-model="foo">
+  {{foo}}
 </div>
 <!-- <script src="../node_modules/vue/dist/vue.js"></script> -->
 <script src="./kvue.js"></script>
@@ -9,7 +12,8 @@
   const app = new KVue({
     el: '#app',
     data: {
-      counter: 1
+      counter: 1,
+      desc: '<span style="color:red">村长真棒</span>'
     },
   })
   setInterval(() => {
